@@ -110,7 +110,6 @@ programs:
   --disable-dselect
   --disable-start-stop-daemon
   --disable-update-alternatives
-  --disable-install-info
 
 And the following to disable modifications to the build flags:
 
