@@ -94,8 +94,6 @@ TODO
 
  * We should set our own obstack_alloc_failed_handler.
 
- * Remove install-info wrapper.
-
 
 ------------------------------------------------------------------------------
 
