@@ -35,10 +35,7 @@ Essential: yes
 Pre-Depends: ${shlibs:Depends}, tar (>= 1.23)
 Depends: ${misc:Depends}
 Breaks: dpkg-dev (<< 1.15.8), libdpkg-perl (<< 1.15.8),
- apt (<< 0.7.7), aptitude (<< 0.4.7-1),
-# install-info transition
-# see http://wiki.debian.org/Transitions/DpkgToGnuInstallInfo
- tkinfo (<< 2.8-3.1), pinfo (<< 0.6.9-3.1)
+ apt (<< 0.7.7), aptitude (<< 0.4.7-1)
 Suggests: apt
 Description: Debian package management system
  This package provides the low-level infrastructure for handling the
