@@ -3,5 +3,3 @@ dpkg: redundant-bugs-field
 dpkg: arch-dep-package-has-big-usr-share
 # False positives, we read from a file not from a tty
 dpkg: read-in-maintainer-script preinst:*
-# On purpose, install-info is only a wrapper that will be removed soon
-dpkg: binary-without-manpage usr/sbin/install-info
