@@ -84,8 +84,6 @@ dpkg-vendor
 s-s-d			[S-S-D]			start-stop-daemon
 u-a			[U-A]			update-alternatives
 
-install-info		[INSTALL-INFO]
-
 Current categories
 ==================
 
@@ -135,7 +133,6 @@ usercategory dpkg-program [hidden]
   + dpkg-source [tag=dpkg-source]
   + dpkg-vendor [tag=dpkg-vendor]
   + Dpkg perl modules [package=libdpkg-perl]
-  + install-info [tag=install-info]
   + dselect [package=dselect]
   + Other [0:]
 
