@@ -1,4 +1,3 @@
 start-stop-daemon
 update-alternatives
-dpkg-install-info
 t.tmp
