@@ -41,18 +41,6 @@ start_stop_daemon_LDADD = \
 	$(SSD_LIBS)
 endif
 
-if BUILD_INSTALL_INFO
-sbin_PROGRAMS += dpkg-install-info
-
-# Automake has its own install-info rule, gah
-dpkg_install_info_SOURCES = install-info.c
-
-dpkg_install_info_LDADD = \
-	../lib/compat/libcompat.a
-endif
-
-transform = s/dpkg-install-info/install-info/; $(program_transform_name)
-
 install-data-local:
 if BUILD_UPDATE_ALTERNATIVES
 	$(MKDIR_P) $(DESTDIR)$(sysconfdir)/alternatives
@@ -62,9 +50,6 @@ endif
 
 uninstall-local:
 	rm -f $(DESTDIR)$(sysconfdir)/alternatives/README
-if BUILD_INSTALL_INFO
-	rm -f $(DESTDIR)$(sbindir)/install-info
-endif
 
 TEST_ENV_VARS = DPKG_DATADIR=$(top_srcdir)
 
